[package]
name = "rtest"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.1"
druid = "0.6.0"
env_logger = "0.7"
log = "0.4"
logging_timer = "1.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
# crossbeam = "0.7"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
# Compile all dependencies in opt-level 3.
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3
