[workspace]
members = [
    "rtest",
    "cargo_test_parser",
    "example_lib_tests",
    "example_bin_tests"
]

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# # Compile all dependencies in opt-level 3.
# opt-level = 3

# [profile.release]
# lto = "fat"
# codegen-units = 1
# # "s" means optimize for size, "z" reduces size even more.
# opt-level = 3
