[package]
name = "rtest"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.1"
druid = "0.6.0"
env_logger = "0.7"
ignore = "0.4"
log = "0.4"
logging_timer = "1.0.0"
remove_dir_all = "0.5.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1"
watchexec = "1.14.0"
