[package]
name = "rtest_core"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"

[dependencies]
cargo_test_parser = { path = "../cargo_test_parser" }
chrono = { version = "0.4" }
clap = "3.0.0-beta.1"
duct = "0.13"
ignore = "0.4"
log = "0.4"
logging_timer = "1.0.0"
remove_dir_all = "0.5.3"
tempfile = "3.1"
watchexec = "1.14.0"
